--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.3.1
 Babel==2.9.0
 certifi==2020.12.5
 chardet==4.0.0
+cloudinary==1.24.0
 dj-database-url==0.5.0
 Django==2.2.17
+django-cloudinary-storage==0.3.0
 django-extra-views==0.13.0
 django-haystack==3.0
 django-heroku==0.3.1
